Fix evaluator findings and bump version to 1.28.0
- thinkingBlockBinding(null) now unsets instead of storing empty object
- disabledServerTools(String...) null-element throws IAE not NPE (Arrays.asList)
- Fix x_search trap wording (SpaceXAI/Grok, not 'native search providers')
- Fix disabledServerTools javadoc: null = unset, empty array = clear
- Fix CHANGELOG disabled_server_tools null semantics wording
- Add tests: raw() happy path, setter-replaces, update-builder validation/accumulate,
  enableImageUnderstanding(false), view absent, keySet-exact, null validation
- Update README.md:3 bullets with new features (safeguards, thinking display/block_binding,
  userLocation/xSearch, disabledServerTools)
- Add request accessor indistinguishability note + workspace class doc governance
- Bump version 1.27.0 -> 1.28.0 (all three poms + README snippet)