@@ -131,7 +131,8 @@ public final class OpenRouterWorkspaceUpdateRequest extends OpenRouterRequest<Op
     /**
      * @return the configured {@code disabled_server_tools} list, empty when
      *         unset (never {@code null}). An empty list when set to empty
-     *         (the API clears the disabled list on an empty array).
+     *         (the API clears the disabled list on an empty array); the two
+     *         are indistinguishable through this accessor.
      */
     public List<String> disabledServerTools() {
         return disabledServerTools == null ? List.of() : disabledServerTools;
@@ -271,9 +272,10 @@ public final class OpenRouterWorkspaceUpdateRequest extends OpenRouterRequest<Op
      * {@code openrouter:subagent}, {@code openrouter:tool_search},
      * {@code openrouter:web_fetch}, {@code openrouter:web_search} and allows
      * unknown values - the library keeps the ids verbatim and validates only
-     * that each is non-empty. An empty array or {@code null} clears the list.
-     * Unset (never called) leaves the stored value unchanged.
-     * Calling this replaces a previously set list.
+     * that each is non-empty. An empty array emits {@code []} and clears the
+     * disabled list; {@code null} unsets the field (same as never calling
+     * this: the stored value stays unchanged). Calling this replaces a
+     * previously set list.
      *
      * @param toolIds the disabled server-tool ids
      * @return this builder
@@ -283,13 +285,14 @@ public final class OpenRouterWorkspaceUpdateRequest extends OpenRouterRequest<Op
             this.disabledServerTools = null;
             return this;
         }
-        return disabledServerTools(List.of(toolIds));
+        return disabledServerTools(java.util.Arrays.asList(toolIds));
     }
 
     /**
      * List-based variant of {@link #disabledServerTools(String...)}.
-     * {@code null} unsets the field (leaves the stored value unchanged);
-     * an empty list emits {@code []} and clears the disabled list.
+     * {@code null} unsets the field (same as never calling this: the stored
+     * value stays unchanged); an empty list emits {@code []} and clears the
+     * disabled list.
      *
      * @param toolIds the disabled server-tool ids
      * @return this builder
